# git-recap

./: Cargo.toml  LICENSE  README.md
src/: config.rs  error.rs  git.rs  lib.rs  main.rs  registry.rs  report.rs
src/commands/: digest.rs  hook.rs  info.rs  install.rs  mod.rs  status.rs  this.rs  touch.rs  uninstall.rs  update.rs
